...
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_new_routes_text"
                android:textSize="24sp"
                tools:text="START NEW ROUTE" />

            <Button
                android:id="@+id/button_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_routes_text"
                android:textSize="24sp" />

            <Button
...
