<resources>
    <string name="route_name">route name</string>
    <string name="start_point">start point</string>
    <string name="new_route">New Route</string>
    <string name="timer_title">Timer</string>
    <string name="timer">00:00:00</string>
    <string name="step_title">Step Count</string>
    <string name="step_count">NAN</string>
    <string name="distance_title">Miles</string>
    <string name="distance">NAN</string>
    <string name="teammate_step_title">Step Count (your friend)</string>
    <string name="teammate_step_count">0</string>
    <string name="teammate_distance_title">Miles (your friend)</string>
    <string name="teammate_distance">0</string>
    <string name="stop_walking">STOP</string>
    <string name="main_intention_time_title">Time:</string>>
    <string name="main_intention_time">NAN</string>>
    <string name="app_name">Walk-Walk Revolution</string>
    <string name="server_client_id">
        584902297847-l8m27tf6ksak9kf10mvo03mvkbbu9pc7.apps.googleusercontent.com</string>
    <string name="sign_in_button_text">Sign-in with Google</string>
    <string name="prompt_input_height_1">
        Hello there! \nTo calculate your steps, \nplease tell us your height:</string>
    <string name="prompt_input_height_2">Input your height here</string>
    <string name="button_done_text">Start!</string>
    <string name="go_to_routes_text">Go to my routes</string>
    <string name="start_new_routes_text">Start new route</string>
    <string name="main_step_count_title">Total Step Count:</string>
    <string name="main_current_title">Current Day</string>
    <string name="last_intention_title">Last Intentional Walk</string>
    <string name="height_unit_ft">ft.</string>
    <string name="height_unit_in">in.</string>
    <string name="feature_prompt">How does this route look like? (optional)</string>
    <string name="update_btn">Increment Step Counts</string>
    <string name="mock_btn">Mock</string>
    <string name="mock_time_title">Please enter a valid time in millisecond</string>
    <string name="mock_time">time in millisecond</string>
    <string name="title_activity_propose_walk">ProposeWalkActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="propose">Propose</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="propose_walk">Propose</string>
    <string name="creator">creator</string>
    <string name="default_notification_channel_id">CH_01</string>
    <string name="default_notification_channel_id2">CH_02</string>

</resources>
