...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkActivity">

    <TextView
        android:id="@+id/routeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="32dp"
        android:text="@string/new_route"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Time_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Time_Title"
...
